--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -32,7 +32,21 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            @RenderBody()
+            <div class="row">
+                <div class="col-3">
+                    <vc:categories />
+
+                    <div class="bg-success mt-3 p-3 text-white">
+                        <vc:small-cart/>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <partial name="_NotificationPartial" />
+                    @RenderBody()
+                </div>
+
+            </div>
         </main>
     </div>
 
@@ -47,3 +61,10 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+
+
+
+
+
+
