add report template

--- a/ShoppingCart/Areas/Admin/Views/Products/Create.cshtml
+++ b/ShoppingCart/Areas/Admin/Views/Products/Create.cshtml
@@ -13,19 +13,19 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" placeholder="Enter the Name of Your Product"/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
            
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <textarea input asp-for="Description" class="form-control" ></textarea>
+                <textarea input asp-for="Description" class="form-control" placeholder="a Brief Description of the Product"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" placeholder="The Price in Dollar (Just Enter the Number Without the Sign)"/>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
 
@@ -39,7 +39,7 @@
 
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input asp-for="ImageUpload" class="form-control" />
+                <input asp-for="ImageUpload" class="form-control" placeholder="Format Should be Either JPG or PNG"/>
                 <img id="imgpreview" class="pt-2"/>
                 <span asp-validation-for="ImageUpload" class="text-danger"></span>
             </div>
@@ -67,5 +67,7 @@
         CKEDITOR.replace('Description');
    </script>
 }
+
+
 
 
