--- a/ShoppingCart/Views/Report/index.cshtml
+++ b/ShoppingCart/Views/Report/index.cshtml
@@ -76,11 +76,14 @@
                         <p class="card-text ">Billing Info</p>
                     </article>
                 </div>
+
+                <footer class="d-flex justify-content-end">
+                      <a class="btn btn-info" asp-action="GenerateReport">Generate report</a>
+                </footer>
             </div>
         </div>
        </div>
     </div>
-
 </div>
 </body>
 </html>
