--- a/ShoppingCart/Views/Home/Index.cshtml
+++ b/ShoppingCart/Views/Home/Index.cshtml
@@ -2,7 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<main class="container my-5">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <!-- Product 1 -->
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://via.placeholder.com/300x200.png?text=Product+Image" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Product 1</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet, quam vel placerat auctor, mauris mauris dictum turpis, vitae aliquet nunc augue id ex.</p>
+          <a href="#" class="btn btn-primary">Buy Now</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+
