--- a/ShoppingCart/Views/Shared/Components/Categories/Default.cshtml
+++ b/ShoppingCart/Views/Shared/Components/Categories/Default.cshtml
@@ -1,17 +1,12 @@
 ﻿@model IEnumerable<Category>
 
-    <ul class="list-group">
-        <li class="list-group-item">
-        <a class="nav-link text-dark" asp-controller="Products" asp-action="Index" asp-route-categorySlug="">All Products</a>
-        </li>
 
-        @foreach(var item in Model)
-    {
-        <li class="list-group-item">
-            <a class="nav-link text-dark" asp-controller="Products" asp-action="Index" asp-route-categorySlug="@item.Slug">@item.Name</a>
-                                                                                                  
-        </li>
-    }
-</ul>
+@foreach(var item in Model)
+{
+    <li class="nav-item">
+        <a class="nav-link link-dark" asp-controller="Products" asp-action="Index" asp-route-categorySlug="@item.Slug">@item.Name</a>                                                                                             
+    </li>
+}
+
 
 
