--- a/ShoppingCart/Views/Shared/_Layout.cshtml.css
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml.css
@@ -7,6 +7,11 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+.navbar {
+  /* background-color: #0f1111; */
+  background-color: #232f3e;
+}
+
 a {
   color: #0077cc;
 }
@@ -17,7 +22,8 @@ a {
   border-color: #1861ac;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
@@ -31,7 +37,7 @@ a {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
 }
 
 button.accept-policy {
@@ -45,4 +51,8 @@ button.accept-policy {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+}
+
+.no-deco {
+  list-style: none;
 }
