--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -83,10 +83,10 @@
          <vc:small-cart />
          @if (!User.Identity?.IsAuthenticated ?? false){
         <li class="nav-item px-2">
-          <a class="nav-link" href="#">Sign In</a>
+          <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Sign In</a>
         </li>
          }
-        <partial name="_LoginPartial" />
+        @* <partial name="_LoginPartial" /> *@
       </ul>
     </div>
   </div>
@@ -98,7 +98,7 @@
     <div class="row">
         <div class="col-md-3">
             <!-- Sidebar -->
-            <div class="d-flex flex-column flex-shrink-0 bg-light vh-100">
+            <div class="d-flex flex-column flex-shrink-0 bg-light">
             <a asp-controller="Products" asp-action="Index"  class="d-flex align-items-center justify-content-center p-3 mb-3 link-dark text-decoration-none border-bottom">
                 <span class="fs-5 fw-semibold">Categories</span>
             </a>
@@ -114,11 +114,13 @@
                 <strong>@User.Identity.Name</strong>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <a class="btn btn-vendor">Become a Vendor</a>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a></li>
                 <li><a class="dropdown-item
                     href="#">Orders</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" asp-controller="Account" asp-action="Logout">Sign out</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })">Sign out</a></li>
             </ul>
             </div>
               }
@@ -163,6 +165,14 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+<style>
+    .btn-vendor{
+        color: #000 !important;
+        background-color: #ffc107;
+        border-color: #ffc107;
+    }
+   
+</style>
 
                        
        
