--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    @await Html.PartialAsync("_Favicons")
     <title>@ViewData["Title"] - ShoppingCart</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -14,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" asp-controller="products" asp-action="index">
                     <i class="bi bi-shop"></i>
                     <span>My Amazon</span>
                 </a>
@@ -35,10 +36,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Services</a>
                         </li>
-                    
-                    <form class="d-flex" asp-controller="Products" asp-action="Index">
+
+                        <form class="d-flex" asp-controller="Products" asp-action="Index">
                         <input class="form-control me-2" type="text" name="SearchString" placeholder="Search" aria-label="Search">
-                        <input class="btn btn-outline-light" type="submit" value="Search" />
+                        @*<input class="btn btn-outline-light" type="submit" value="Search" />*@
+                        <button class="btn btn-light" type="submit">
+                            <i class="bi bi-search"></i>
+                        </button>
                     </form>
                     
                         @*<vc:small-cart />*@
