--- a/ShoppingCart/Views/ManagingProducts/Index.cshtml
+++ b/ShoppingCart/Views/ManagingProducts/Index.cshtml
@@ -47,7 +47,7 @@
 
 <div class="d-flex w-100 justify-content-center">
     <pagination page-count="@ViewBag.TotalPages"
-                page-target="/admin/products/@ViewBag.CategorySlug"
+                page-target="/managingproducts/@ViewBag.CategorySlug"
                 page-number="@ViewBag.PageNumber"
                 page-range="@ViewBag.PageRange"></pagination>
 </div>
