--- a/ShoppingCart/Views/Home/Privacy.cshtml
+++ b/ShoppingCart/Views/Home/Privacy.cshtml
@@ -3,4 +3,36 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    We at My Amazon are committed to protecting the privacy and security of our customers' personal information. This privacy policy outlines how we collect, use, and protect your personal information.
+
+    Information we collect:
+
+    When you make a purchase on our website, we collect your name, email address, shipping address, billing address, and payment information.
+
+    We also collect information about your browsing behavior on our website, such as the pages you visit, the products you view, and the items you add to your cart.
+
+    How we use your information:
+
+    We use your personal information to process your orders and to provide you with a personalized shopping experience. We may also use your information to send you promotional offers or newsletters, but only if you have explicitly opted-in to receive such communications.
+
+    We do not share your personal information with third-party advertisers or marketers.
+
+    How we protect your information:
+
+    We use industry-standard security measures, such as encryption and firewalls, to protect your personal information from unauthorized access, disclosure, or modification.
+
+    We also restrict access to your personal information to our employees and trusted service providers who need to know this information in order to process your orders.
+
+    Your rights:
+
+    You have the right to access, update, or delete your personal information at any time. You may also request that we stop sending you promotional offers or newsletters.
+
+    To exercise your rights, please contact us at [contact information].
+
+    Changes to this policy:
+
+    We may update this privacy policy from time to time in order to reflect changes to our information practices. If we make any material changes, we will notify you by email or by posting a notice on our website.
+
+    By using our website, you consent to our collection, use, and protection of your personal information as outlined in this policy.
+</p>
