fix shopping cart registered and guest user

--- a/ShoppingCart/Views/Cart/Index.cshtml
+++ b/ShoppingCart/Views/Cart/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="card mb-3" style="box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);">
             <div class="card-body">
-                <div class="pb-3 mb-3">
+                 <div class="pb-3 mb-3">
                     <h3 class="card-title">Shopping Cart</h3>
                     <a asp-action="Clear" class="text-link">Delete all items</a>
                 </div>
@@ -18,7 +18,7 @@
                     <article class="mb-3">
                     <div class="items">
                         <ol style="list-style: none;">
-                            @foreach (var item in Model.CartItems)
+                           @foreach (var item in Model?.Cart?.CartItems ?? Enumerable.Empty<CartItem>())
                             {
                                 <li class="pb-3">
                                     <div class="d-flex justify-content-between">
@@ -33,15 +33,15 @@
                                                 <div class="col-sm-4 d-flex justify-content-between">
                                                     <span>Qty: </span>
                                                 @* <select asp-for="SelectedOption" asp-items="@Model.Options" asp-route-id="@item.ProductId"  asp-action="addQuantity"></select> *@
-                                                <a class="btn btn-sm" asp-action="Decrease" asp-route-id="@item.ProductId"><i class="bi bi-arrow-down-short"></i></a>
+                                                <a class="btn btn-sm" asp-action="Decrease" asp-route-id="@item.Product.Id"><i class="bi bi-arrow-down-short"></i></a>
                                                     <span>@item.Quantity</span>
-                                                <a class="btn btn-sm" asp-action="Add" asp-route-id="@item.ProductId"><i class="bi bi-arrow-up-short"></i></a>
+                                                <a class="btn btn-sm" asp-action="Add" asp-route-id="@item.Product.Id"><i class="bi bi-arrow-up-short"></i></a>
                                                 </div>
                                                 <div class="col-sm-1 pipe">
                                                     |
                                                 </div>
                                                 <div class="col-sm-3">
-                                                    <a asp-action="Remove" asp-route-id="@item.ProductId" class="text-link">Delete</a>
+                                                    <a asp-action="Remove" asp-route-id="@item.Product.Id" class="text-link">Delete</a>
                                                 </div>
                                              
                                              </div>
@@ -63,7 +63,10 @@
                 <footer>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>Subtotal (@Model.NumberOfItems items): <span class="fw-bold">@Model.GrandTotal.ToString("C2")</span></p>
+                           @if (Model.Cart?.CartItems != null)
+                            {
+                                <p>Subtotal (@Model.Cart.CartItems.Count() items): <span class="fw-bold">@Model.Cart.Total.ToString("C2")</span></p>
+                            }
                         </div>
                         <div class="col-md-12 d-flex justify-content-end">
                             <a href="/order" class="btn btn-warning btn-sm px-4" style="border-radius: 7px;">Proceed to checkout</a>
@@ -75,48 +78,6 @@
        </div>
     </div>
 </main>
-@* @if (Model.CartItems.Count > 0)
-{
-    <table class="table">
-        <tr>
-            <th>Product</th>
-            <th>Quantity</th>
-            <th></th>
-            <th>Price</th>
-            <th>Total</th>
-        </tr>
-        @foreach (var item in Model.CartItems)
-        {
-            <tr>
-                <td>@item.ProductName</td>
-                <td>@item.Quantity</td>
-                <td>
-                    <a class="btn btn-primary btn-sm" asp-action="Add" asp-route-id="@item.ProductId">+</a>
-                    <a class="btn btn-info btn-sm" asp-action="Decrease" asp-route-id="@item.ProductId">-</a>
-                    <a class="btn btn-danger btn-sm" asp-action="Remove" asp-route-id="@item.ProductId">Remove</a>
-                </td>
-                <td>@item.Price.ToString("C2")</td>
-                <td>@Model.CartItems.Where(x => x.ProductId == item.ProductId).Sum(x => x.Quantity * x.Price).ToString("C2")</td>
-                    
-            </tr>
-        }
-        <tr>
-            <td class="text-right" colspan="4">Grand Total: @Model.GrandTotal.ToString("C2")</td>
-        </tr>
-
-        <tr>
-            <td class="text-right" colspan="4">
-                <a class="btn btn-danger" asp-action="Clear">Clear out</a>
-                <a class="btn btn-primary" href="#">Checkout</a>
-            </td>
-        </tr>
-    </table>
-}
-else
-{
-    <h3 class="display-4 text-center">Your cart is empty</h3>
-}
- *@
 
 <style>
     .text-link{
