--- a/ShoppingCart/Views/Order/index.cshtml
+++ b/ShoppingCart/Views/Order/index.cshtml
@@ -1,4 +1,4 @@
-@model CartViewModel
+@* @model CartViewModel
 @{
   Layout = null;
 }
@@ -285,4 +285,4 @@
     height: 29px;
     width: 45px;
 }
-</style>
+</style> *@
