--- a/ShoppingCart/Views/Report/index.cshtml
+++ b/ShoppingCart/Views/Report/index.cshtml
@@ -1,4 +1,4 @@
-@model ReportViewModel
+@* @model ReportViewModel
 @{
   Layout = null;
 }
@@ -86,4 +86,4 @@
     </div>
 </div>
 </body>
-</html>
+</html> *@
