--- a/ShoppingCart/Views/Products/Index.cshtml
+++ b/ShoppingCart/Views/Products/Index.cshtml
@@ -18,7 +18,7 @@
           <h5 class="card-title">@item.Name</h5>
           <p class="card-text" style="color: #565959">@Html.Raw(item.Description)</p>
            <p class="font-weight-bold">@item.Price.ToString("C2")</p>
-          <a class="btn btn-warning btn-sm" asp-controller="Cart" asp-action="Add" asp-route-id="@item.Id">Add to Cart</a>
+          <a class="btn btn-warning btn-sm" asp-controller="Cart" asp-action="AddToCart" asp-route-id="@item.Id">Add to Cart</a>
         </div>
       </div>
     </div>
