--- a/ShoppingCart/Views/Order/index.cshtml
+++ b/ShoppingCart/Views/Order/index.cshtml
@@ -1,10 +1,10 @@
-@* @model CartViewModel
+@model CartViewModel
 @{
   Layout = null;
 }
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Order";
 }
 
 <!DOCTYPE html>
@@ -22,7 +22,9 @@
     <nav class="navbar">
         <div class="container d-flex">
                <h5><a href="/" class="nav-link "> My Amazon</a></5>
-               <h4>Checkout (@Model.NumberOfItems items)</h4>
+           
+                <h4>Checkout (@Model?.Cart?.CartItems.Count() items)</h4>
+                
                <p><i class="bi bi-lock-fill"></i></p>
         </div>
     </nav>
@@ -69,7 +71,7 @@
                     <article class="mb-3">
                             <div class="items">
                                 <ol style="list-style: none;">
-                                    @foreach (var item in Model.CartItems)
+                                    @foreach (var item in Model?.Cart?.CartItems ?? Enumerable.Empty<CartItem>())
                                     {
                                         <li class="pb-3">
                                             <div class="d-flex justify-content-between">
@@ -81,9 +83,9 @@
                                                     <p class="fw-bold mb-0"> @item.ProductName </p>
                                                     <p class="mb-0 t-total-mini"> $@item.Price </p>
                                                     <p class="col-sm-4 d-flex justify-content-between">
-                                                        <a class="link" asp-controller="cart" asp-action="Decrease" asp-route-id="@item.ProductId"><i class="bi bi-arrow-down-short"></i></a>
+                                                        <a class="link" asp-controller="cart" asp-action="Decrease" asp-route-id="@item.Product.Id"><i class="bi bi-arrow-down-short"></i></a>
                                                         <span class="t-12">@item.Quantity</span>
-                                                        <a class="link" asp-controller="cart" asp-action="Add" asp-route-id="@item.ProductId"><i class="bi bi-arrow-up-short"></i></a>
+                                                        <a class="link" asp-controller="cart" asp-action="Add" asp-route-id="@item.Product.Id"><i class="bi bi-arrow-up-short"></i></a>
                                                     </p>
                                                 </div>
                                             </div>
@@ -107,7 +109,7 @@
                             <div class="col-md-9">
                                 <div class="d-flex t-total mb-0">
                                     <p class="mb-0">Order Total:</p>
-                                    <p class="mb-0" >$@Model.GrandTotal</p>
+                                    <p class="mb-0" >$@Model?.Cart?.Total</p>
                                 </div>
                                 <small class="t-size">By placing your order, you agree to My Amazon's privacy notice and conditions of use.</small>
                             </div>
@@ -126,8 +128,8 @@
                         <h6 class="fw-bold mb-3">Order Summary</h6>
                         <div class="t-size">
                             <div class="d-flex justify-content-between">
-                                <p>Item:(@Model.NumberOfItems)</p>
-                                <p>$@Model.GrandTotal</p>
+                                <p>Item:(@Model?.Cart?.CartItems.Count())</p>
+                                <p>$@Model?.Cart?.Total</p>
                             </div>
                             <div class="d-flex justify-content-between mb-0">
                                 <p class="mb-0">Shipping & handling:</p>
@@ -137,7 +139,7 @@
                             <p></p>
                             <div class="d-flex justify-content-between">
                                 <p>Total before tax:</p>
-                                <p>$@Model.GrandTotal</p>
+                                <p>$@Model?.Cart?.Total</p>
                             </div>
                             <div class="d-flex justify-content-between">
                                 <p>Estimated tax to be collected:</p>
@@ -145,12 +147,12 @@
                             </div>
                             <div class="d-flex justify-content-between">
                                 <p  class="mb-0">Total:</p>
-                                <p  class="mb-0">$@Model.GrandTotal</p>
+                                <p  class="mb-0">$@Model?.Cart?.Total</p>
                             </div>
                             <hr>
                             <div class="d-flex justify-content-between t-total">
                                 <p>Order Total:</p>
-                                <p >$@Model.GrandTotal</p>
+                                <p >$@Model?.Cart?.Total</p>
                             </div>
                         </div>
                     </div>
@@ -285,4 +287,4 @@
     height: 29px;
     width: 45px;
 }
-</style> *@
+</style>
