add checkout ui

--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
       </div>
       <div class="modal-footers">
         <div class="d-grid gap-2 mx-5 my-3">
-            <button class="btn btn-dark" type="button">20,000$US/year</button>
+            <a class="btn btn-dark a-text" type="button" href="/checkout">20,000$US/year</a>
         </div>
         <div class="mx-5 my-3">
             <small class="f-11">By subscribing, you agree to our Vendor <a href="">Terms of Service.</a> Subscriptions auto-renew until canceled, as described in the Terms. Cancel anytime. A verified phone number is required to subscribe. If you've subscribed on another platform, manage your subscription through that platform.</p>
@@ -169,6 +169,10 @@
    .f-11{
         font-size:11px;
         line-height: 1px;
+   }
+
+   .a-text, .a-text:hover{
+        color: #FFF !important;
    }
 
 </style>
